app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
   --form-control-color: rebeccapurple;
   --fc-today-bg-color: #fbebe6 !important;
}

.fc-timegrid-slot-minor,
.fc-timegrid-slot-label,
.fc-event {
   border: none !important;
}

.fc-toolbar-title {
   display: inline;
   font-weight: 600 !important;
   font-size: 1.25rem !important;
   margin-left: 0 !important;
}

.fc-toolbar-chunk {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
   row-gap: 1rem;
   max-width: calc(100vw - 3.4rem);
}

.fc {
   min-height: 100vh;
   position: relative;
}

.fc-header-toolbar {
   position: sticky;
   left: 0;
   width: max-content;
}

.fc-next-button {
   margin-left: 0 !important;
}

@media (min-width: 1024px) {
   .fc-button-group {
      width: auto;
   }


   .fc {
      min-height: auto;
   }

   .fc-toolbar-chunk {
      max-width: auto;
   }
}

@media (min-width: 640px) {
   .fc-toolbar-title {
      font-size: 1.875rem !important;
   }
}

.fc-button-group {
   width: 100%;
   margin-left: 0 !important;
}

.fc-button {
   color: black !important;
   background-color: #f8f8f8 !important;
   transition: 0.2s;
   border: none !important;
}

.fc-prev-button,
.fc-next-button {
   padding: 0 !important;
   background-color: transparent !important;
}

.fc-button:hover {
   translate: 0 -0.1rem;
   box-shadow:
      0 1px 3px 0 rgb(0 0 0 / 0.1),
      0 1px 2px -1px rgb(0 0 0 / 0.1);
}

.fc-timegrid-event-harness:hover {
   z-index: 10 !important;
}



@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
} 

/* width */
::-webkit-scrollbar {
   width: 1rem;
}

/* Track */
::-webkit-scrollbar-track {
   background: white;
}

/* Handle */
::-webkit-scrollbar-thumb {
   border-radius: 9999px;
   background: #4fd1c5;
   margin: 0.25rem;
   border: 0.25rem solid white;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
   background: #38948c;
}

input[type='radio'] {
   -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
   margin: 0;
   font: inherit;
   color: currentColor;
   width: 1.15rem;
   height: 1.15rem;
   border: 0.15rem solid #b0b0b0;
   border-radius: 50%;
   transform: translateY(-0.075em);
   display: grid;
   place-content: center;
}

input[type='radio']:checked {
   border: 0.15em solid #db3a00;
}

input[type='radio']::before {
   content: '';
   width: 0.65rem;
   height: 0.65rem;
   border-radius: 50%;
   transform: scale(0);
   transition: 120ms transform ease-in-out;
   box-shadow: inset 1rem 1rem #db3a00;
}

input[type='radio']:checked::before {
   transform: scale(1);
}

input[type='checkbox'] {
   -webkit-appearance: none;
   appearance: none;
   background-color: #fff;
   margin: 0;
   font: inherit;
   color: currentColor;
   width: 1.15em;
   height: 1.15em;
   border: 0.15em solid currentColor;
   border-radius: 0.15em;
   transform: translateY(-0.075em);
   display: grid;
   place-content: center;
}

input[type='checkbox']::before {
   content: '✓';
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 1rem;
   height: 1rem;
   transform: scale(0);
   transition: 120ms transform ease-in-out;
   box-shadow: inset 1em 1em #db3a00;
}

input[type='checkbox']:checked::before {
   transform: scale(1);
}

